--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.5.9",
     "react-icons": "^5.3.0",
     "react-router": "^7.7.1",
     "tailwindcss": "^4.1.11"
