--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.9",
     "react-icons": "^5.3.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.7.1",
     "tailwindcss": "^4.1.11"
   },
