--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^10.1.0",
     "react-router": "^7.7.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
